# glad

./: .gitignore  CMakeLists.txt  README.md  build.sh  premake5.lua
cmake/: glad.cmake.in  glad.pc.in
include/glad/: glad.h
src/: glad.c
